--- a/lib/grocery_planner_web/live/meal_planner_live.html.heex
+++ b/lib/grocery_planner_web/live/meal_planner_live.html.heex
@@ -565,6 +565,12 @@
                               {recipe.difficulty}
                             </span>
                             <span
+                              :if={recipe.total_time_minutes}
+                              class="badge badge-sm bg-base-200 text-base-content/70 border border-base-200"
+                            >
+                              {recipe.total_time_minutes} min
+                            </span>
+                            <span
                               :if={recipe.is_base_recipe && recipe.follow_up_recipes != []}
                               class="badge badge-sm bg-success/10 text-success border border-success/20"
                             >
@@ -961,6 +967,12 @@
                       <div class="flex flex-wrap gap-2 mt-2">
                         <span class="badge badge-sm badge-ghost capitalize">
                           {recipe.difficulty}
+                        </span>
+                        <span
+                          :if={recipe.total_time_minutes}
+                          class="badge badge-sm bg-base-200 text-base-content/70 border border-base-200"
+                        >
+                          {recipe.total_time_minutes} min
                         </span>
                         <span
                           :if={recipe.is_base_recipe && recipe.follow_up_recipes != []}
