--- a/lib/grocery_planner_web/live/meal_planner_live.html.heex
+++ b/lib/grocery_planner_web/live/meal_planner_live.html.heex
@@ -1320,17 +1320,32 @@
           </div>
         </div>
 
-        <div class="p-4 border-t border-base-200 bg-base-200/40 flex items-center justify-end gap-2">
-          <button phx-click="explorer_close_slot_picker" class="btn btn-ghost">
-            Cancel
-          </button>
-          <button
-            phx-click="explorer_confirm_add"
-            class="btn btn-primary"
-            id="explorer-confirm-add"
-          >
-            Add
-          </button>
+        <div class="p-4 border-t border-base-200 bg-base-200/40 flex items-center justify-between gap-3">
+          <%= if @explorer_undo do %>
+            <button
+              phx-click="explorer_undo"
+              class="btn btn-ghost btn-sm"
+              id="explorer-undo"
+              type="button"
+            >
+              <.icon name="hero-arrow-uturn-left" class="w-4 h-4" /> Undo last
+            </button>
+          <% else %>
+            <div></div>
+          <% end %>
+
+          <div class="flex items-center gap-2">
+            <button phx-click="explorer_close_slot_picker" class="btn btn-ghost">
+              Cancel
+            </button>
+            <button
+              phx-click="explorer_confirm_add"
+              class="btn btn-primary"
+              id="explorer-confirm-add"
+            >
+              Add
+            </button>
+          </div>
         </div>
       </div>
     </div>
